--- a/src/global/app.css
+++ b/src/global/app.css
@@ -8,7 +8,7 @@
   Any global CSS variables should also be applied here.
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 body {
   margin: 0px;
