--- a/src/components/elements/rot-header/rot-header.scss
+++ b/src/components/elements/rot-header/rot-header.scss
@@ -2,14 +2,26 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  padding: 0 10vw;
+  box-sizing: border-box;
+  background-image: linear-gradient(
+    0deg,
+    rgba(51,51,51,0) 0%,
+    rgba(51,51,51,0.5) 100%);
 }
 
 h1 {
-    color: white;
+  color: white;
 }
 
 nav stencil-route-link a {
   color: white;
+  text-decoration: none;
   padding: 0 10px;
   &.link-active {
     border-bottom: 1px solid;
