Add message banner in homepage

--- a/src/components/elements/rot-main-ruling-card/rot-main-ruling-card.scss
+++ b/src/components/elements/rot-main-ruling-card/rot-main-ruling-card.scss
@@ -4,7 +4,8 @@
   display: block;
   width: 500px;
   height: 450px;
-  padding: 60px 100px;
+  padding: 60px 10vw;
+  color: white;
 }
 
 %main-ruling-card-position {
