--- a/src/components/pages/app-home/app-home.scss
+++ b/src/components/pages/app-home/app-home.scss
@@ -1,3 +1,11 @@
-rot-main-ruling {
-  height: 100vh;
+section {
+  padding: 33px 10vw;
+  color: #333333;
+
+  h2 {
+    font-size: 40px;
+    line-height: 48px;
+    font-family: "Lato";
+    font-weight: 300;
+  }
 }
