--- a/src/components/elements/rot-header/rot-header.scss
+++ b/src/components/elements/rot-header/rot-header.scss
@@ -19,11 +19,32 @@ h1 {
   color: white;
 }
 
-nav stencil-route-link a {
+stencil-route-link a {
   color: white;
   text-decoration: none;
-  padding: 0 10px;
-  &.link-active {
-    border-bottom: 1px solid;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+
+  > * {
+    padding: 0 20px;
+  }
+
+  rot-button {
+    display: inline-block;
+    rot-icon {
+      font-size: 26px;
+    }
+  }
+
+  stencil-route-link a {
+    font-size: 16px;
+    line-height: 19px;
+
+    &.link-active {
+      border-bottom: 1px solid;
+    }
   }
 }
