--- a/src/components/elements/rot-main-ruling-card/rot-main-ruling-card.scss
+++ b/src/components/elements/rot-main-ruling-card/rot-main-ruling-card.scss
@@ -2,27 +2,28 @@
 :host {
   position: relative;
   display: block;
-  width: 500px;
+  max-width: 500px;
+  width:100vw;
   height: 450px;
   padding: 60px 10vw;
   color: white;
 }
 
-%main-ruling-card-position {
-  position: absolute;
-  width: 500px;
-  height: 450px;
-}
-
 .main-ruling-card--blur {
-  @extend %main-ruling-card-position;
+  position: absolute;
+  max-width: 500px;
+  width:100vw;
+  height: 370px;
   background-color: rgba(51,51,51,0.45);
   pointer-events: none;
   backdrop-filter: blur(35px);
 }
 
 .main-ruling-card {
-  @extend %main-ruling-card-position;
+  position: absolute;
+  max-width: 500px;
+  width:100vw;
+  height: 450px;
   box-sizing: border-box;
   padding: 44px 37px;
   font-weight: 300;
@@ -78,8 +79,8 @@
         align-items: center;
         justify-content: center;
         font-size: 40px;
-        &:nth-child(1) { background-color: rgba(28,187,180); }
-        &:nth-child(2) { background-color: rgba(255,173,29); }
+        &:nth-child(1) { background-color: rgba(28,187,180,0.9); }
+        &:nth-child(2) { background-color: rgba(255,173,29,0.9); }
       }
     }
   }
