Vote cards styling (80% done)

--- a/src/components/elements/rot-main-ruling/rot-main-ruling.scss
+++ b/src/components/elements/rot-main-ruling/rot-main-ruling.scss
@@ -1,7 +1,8 @@
 :host {
   min-height: 600px;
   height: 100vh;
-  background-position: 0px -20px;
+  background-position: center center;
+  background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   display: flex;
