--- a/src/components/elements/rot-button/rot-button.scss
+++ b/src/components/elements/rot-button/rot-button.scss
@@ -1,7 +1,14 @@
 :host {
+  box-sizing: border-box;
   color: white;
   cursor: pointer;
   display: block;
+  padding: 10px 20px;
+}
+
+:host([theme='text']) {
+  background-color: rgba(0,0,0,0.14901960784313725);
+  border: 2px solid #ffffff;
 }
 
 :host([theme='invert']) {
