Vote cards styling and votes score bar section

--- a/src/components/elements/rot-button/rot-button.scss
+++ b/src/components/elements/rot-button/rot-button.scss
@@ -7,7 +7,7 @@
 }
 
 :host([theme='text']) {
-  background-color: rgba(0,0,0,0.14901960784313725);
+  background-color: rgba(0,0,0,0.1);
   border: 2px solid #ffffff;
 }
 
