--- a/src/components/elements/rot-vote-card/rot-vote-card.scss
+++ b/src/components/elements/rot-vote-card/rot-vote-card.scss
@@ -18,19 +18,14 @@
     var(--rot-vote-card-bg-image);
 }
 
-section {
+.title-name {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding: 50px;
+  align-items: flex-end;
 
-  rot-icon.major-vote {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  rot-icon {
     font-size: 23px;
     padding: 4px;
-    width: fit-content;
+    margin-right: 19px;
   }
 
   h1 {
@@ -38,6 +33,13 @@ section {
     margin: 0;
     font-weight: 400;
   }
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 0 50px 50px 50px;
 
   p {
     font-size: 16px;
