Responsive menu, and some small refactoring in store and typing

--- a/src/components/elements/rot-icon/rot-icon.scss
+++ b/src/components/elements/rot-icon/rot-icon.scss
@@ -44,6 +44,10 @@
   content: "\e905";
 }
 
+:host([icon="navicon"]):before {
+  content: "\f0c9";
+}
+
 /* Themes */
 :host([theme="up"]) {
   background-color: $thumb-up-color;
