--- a/src/components/elements/rot-header/rot-header.scss
+++ b/src/components/elements/rot-header/rot-header.scss
@@ -39,6 +39,41 @@ nav {
     }
   }
 
+  .responsive-icon {
+    display: none;
+  }
+
+  @media screen and (max-width: 600px) {
+    &.menu-opened {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100vw;
+      display: grid;
+      text-align: center;
+      padding: 15vh 0;
+      box-sizing: border-box;
+      background-image: linear-gradient( 0deg, rgba(51,51,51,1) 0%, rgba(51,51,51,0.8) 50%, rgba(51,51,51,1) 100%);
+
+      stencil-route-link a {
+        font-size: 45px;
+      }
+
+      rot-button rot-icon {
+        font-size: 35px;
+      }
+    }
+
+    .responsive-icon {
+      display: inline-block;
+    }
+
+    &:not(.menu-opened) > *:not(.responsive-icon) {
+      display: none;
+    }
+  }
+
   stencil-route-link a {
     font-size: 16px;
     line-height: 19px;
