--- a/src/components/elements/rot-main-ruling/rot-main-ruling.scss
+++ b/src/components/elements/rot-main-ruling/rot-main-ruling.scss
@@ -10,13 +10,32 @@
   justify-content: flex-end;
 }
 
+.responsive-main-image {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  @media screen and (max-width: 600px) {
+    display: block;
+  }
+}
+
+rot-main-ruling-card {
+  @media screen and (min-width: 600px) {
+    width: 500px;
+    height: 450px;
+    margin: 60px 10vw;
+  }
+}
+
 .closing-in-banner {
   height: 50px;
   background-color: rgba(112,112,112,0.3);
   width: 100%;
   display: grid;
   box-sizing: border-box;
-  grid-template-columns: 25vw 1fr;
+  grid-template-columns: 30vw 1fr;
 
   > div {
     display: flex;
