Improve responsive rules for homepage elements

--- a/src/components/elements/rot-header/rot-header.scss
+++ b/src/components/elements/rot-header/rot-header.scss
@@ -58,6 +58,7 @@ nav {
 
       stencil-route-link a {
         font-size: 45px;
+        line-height: initial;
       }
 
       rot-button rot-icon {
