--- a/src/components/elements/rot-main-ruling/rot-main-ruling.scss
+++ b/src/components/elements/rot-main-ruling/rot-main-ruling.scss
@@ -25,7 +25,7 @@ rot-main-ruling-card {
   @media screen and (min-width: 600px) {
     width: 500px;
     height: 450px;
-    margin: 60px 10vw;
+    margin: 5vh 10vw;
   }
 }
 
