--- a/src/components/elements/rot-vote-card/rot-vote-card.scss
+++ b/src/components/elements/rot-vote-card/rot-vote-card.scss
@@ -28,10 +28,12 @@
   }
 
   h1 {
-    font-size: 45px;
-    line-height: 35px;
     margin: 0;
     font-weight: 400;
+    @media screen and (min-width: 400px) {
+      font-size: 45px;
+      line-height: 35px;
+    }
   }
 }
 
@@ -39,7 +41,10 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding: 0 50px 50px 50px;
+  padding: 10px;
+  @media screen and (min-width: 400px) {
+    padding: 0 50px 50px 50px;
+  }
 
   p {
     font-size: 16px;
