--- a/src/components/elements/rot-vote-cards/rot-vote-cards.scss
+++ b/src/components/elements/rot-vote-cards/rot-vote-cards.scss
@@ -1,5 +1,7 @@
 :host {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
+  @media screen and (min-width: 700px) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
