--- a/src/components/elements/rot-main-ruling-card/rot-main-ruling-card.scss
+++ b/src/components/elements/rot-main-ruling-card/rot-main-ruling-card.scss
@@ -8,7 +8,7 @@
   background-color: rgba(51,51,51,0.45);
   backdrop-filter: blur(35px);
 
-  @media screen and (max-width: 600px) {
+  @media #{$small-only} {
     background-color: rgba(51,51,51,0.65);
   }
 
@@ -26,14 +26,14 @@
     margin: -5px 0 0 0;
     font-weight: normal;
 
-    @media screen and (max-width: 600px) {
+    @media #{$small-only} {
       font-size: 40px;
     }
   }
 
   p {
     font-size: 21px;
-    @media screen and (max-width: 600px) {
+    @media #{$small-only} {
       font-size: 19px;
       margin: 5px 0;
     }
@@ -53,7 +53,7 @@
 
   h3 {
     font-size: 20px;
-    @media screen and (max-width: 600px) {
+    @media #{$small-only} {
       margin: 10px 0;
     }
   }
