--- a/src/components/elements/rot-main-ruling/rot-main-ruling.scss
+++ b/src/components/elements/rot-main-ruling/rot-main-ruling.scss
@@ -16,13 +16,13 @@
   height: 100%;
   background-size: cover;
   background-position: center;
-  @media screen and (max-width: 600px) {
+  @media #{$small-only} {
     display: block;
   }
 }
 
 rot-main-ruling-card {
-  @media screen and (min-width: 600px) {
+  @media #{$medium-up} {
     width: 500px;
     height: 450px;
     margin: 5vh 10vw;
