--- a/src/components/elements/rot-submit-name-banner/rot-submit-name-banner.scss
+++ b/src/components/elements/rot-submit-name-banner/rot-submit-name-banner.scss
@@ -1,6 +1,5 @@
 :host {
   display: flex;
-  height: 80px;
   align-items: center;
   justify-content: space-between;
   background-image: linear-gradient(
@@ -9,13 +8,35 @@
     rgba(255,255,255,0.8) 100%),
     url('/assets/images/site/people-banner.png');
   background-position: center;
-  padding: 0 20px;
+  padding: 20px;
+  box-sizing: border-box;
+
+  @media #{$medium-up} {
+    height: 80px;
+  }
+
+  @media #{$small-only} {
+    flex-direction: column;
+  }
 
   h2 {
     font-size: 30px;
     line-height: 24px;
     color: #333333;
     font-weight: 300;
+
+    @media #{$small-only} {
+      font-size: 20px;
+      line-height: 20px;
+    }
+
+    @media #{$medium-only} {
+      font-size: 24px;
+    }
+
+    @media #{$medium-up} {
+      margin: 0;
+    }
   }
 
   rot-button {
@@ -26,5 +47,14 @@
     font-weight: 400;
     text-align: center;
     padding: 10px 30px;
+
+    @media #{$small-only} {
+      font-size: 16px;
+      line-height: 16px;
+    }
+
+    @media #{$medium-up} {
+      min-width: 200px;
+    }
   }
 }
